--- a/src/ex1/views/main.css
+++ b/src/ex1/views/main.css
@@ -1,35 +1,31 @@
 body {
-	user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
-	-moz-user-select: none;
-	background-image: url("../../../assets/leaves_V.jpg");
-	background-color: #94927d;
-	background-blend-mode: multiply;
-	background-position: top;
-	background-size: cover;
-	background-size: 768px;
-}
-body header {
-	max-width: 768px;
-	background-color: olive;
-}
-body main {
-	max-width: 768px;
-}
-body main #mapid {
-	width: 100%;
-	min-height: 768px;
-}
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  background-image: url("../../../assets/leaves_V.jpg");
+  background-color: #94927d;
+  background-blend-mode: multiply;
+  background-position: top;
+  background-size: cover;
+  background-size: 768px; }
+  body header {
+    max-width: 768px;
+    background-color: olive; }
+  body main {
+    max-width: 768px; }
+    body main #barcelona {
+      width: 100%;
+      height: 384px; }
 
-.text-beige {
-	color: beige;
-}
+.text-olivedrab {
+  color: #9a9a00; }
+
+.text-cadetblue {
+  color: cadetblue; }
 
 .border-olive {
-	border-color: #3c3c0d !important;
-}
+  border-color: olive !important; }
 
 .bg-olive {
-	background-color: olivedrab;
-}
+  background-color: #242400; }
