--- a/src/ex1/views/index.html
+++ b/src/ex1/views/index.html
@@ -52,7 +52,7 @@
 
 			<!-- Map center -->
 			<p id="map-center" class="bg-light text-dark font-weight-lighter border border-olive rounded-bottom p-1">
-				<b>Map center:</b>
+				<b>map center:</b>
 				<span></span>
 			</p>
 		</main>
