--- a/src/views/ex1.html
+++ b/src/views/ex1.html
@@ -64,7 +64,7 @@
 			crossorigin=""
 		></script>
 
-		<script src="../models/Coordinate.js"></script>
+		<script src="../models/Point.js"></script>
 		<!-- Custom JS -->
 		<script src="../controllers/main.js"></script>
 
