--- a/src/views/ex2.html
+++ b/src/views/ex2.html
@@ -63,9 +63,9 @@
 			integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
 			crossorigin=""
 		></script>
-
 		<!-- Custom JS -->
 		<script src="../models/Point.js"></script>
 		<script src="../controllers/main1.js"></script>
+		<script src="../controllers/main2.js"></script>
 	</body>
 </html>
