--- a/src/views/ex1.html
+++ b/src/views/ex1.html
@@ -52,7 +52,7 @@
 
 			<!-- Map center -->
 			<p id="map-center" class="bg-light text-dark font-weight-lighter border border-olive rounded-bottom p-1">
-				<b>map center:</b>
+				<b>map starting center:</b>
 				<span></span>
 			</p>
 		</main>
