--- a/src/views/ex2.html
+++ b/src/views/ex2.html
@@ -26,7 +26,7 @@
 	</head>
 
 	<body>
-		<header class="border border-olive text-light shadow-lg mx-auto mt-0 px-4 py-4">
+		<header class="border border-olive text-light shadow-lg mx-auto mt-0 mt-md-4 px-4 py-4">
 			<hgroup>
 				<h1 class="font-weight-norma m-0">Leaflet</h1>
 				<h2 class="h3 font-weight-lighter">GPS coordinates</h2>
@@ -52,7 +52,7 @@
 
 			<!-- Map center -->
 			<p id="map-center" class="bg-light text-dark font-weight-lighter border border-olive rounded-bottom p-1">
-				<b>map center:</b>
+				<b>map starting center:</b>
 				<span></span>
 			</p>
 		</main>
@@ -63,6 +63,7 @@
 			integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
 			crossorigin=""
 		></script>
+		
 		<!-- Custom JS -->
 		<script src="../models/Point.js"></script>
 		<script src="../controllers/main1.js"></script>
