--- a/src/views/ex2.html
+++ b/src/views/ex2.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Leaflet - coordenades</title>
 		<!-- favicon -->
-		<link rel="icon" type="image/png" href="../../../assets/leaflet_icon.ico" />
+		<link rel="icon" type="image/png" href="../../assets/leaflet_icon.ico" />
 		<!-- Bootstrap CSS -->
 		<link
 			rel="stylesheet"
@@ -14,15 +14,15 @@
 			crossorigin="anonymous"
 		/>
 		<!-- Leaflet CCS -->
-		<link
+		<!-- <link
 			rel="stylesheet"
 			href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
 			integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
 			crossorigin=""
-		/>
+		/> -->
 
 		<!-- Custom CSS -->
-		<link rel="stylesheet" href="./main.css" />
+		<!-- <link rel="stylesheet" href="./main.css" /> -->
 	</head>
 
 	<body>
@@ -58,15 +58,15 @@
 		</main>
 
 		<!-- Laflet JS -->
-		<script
+		<!-- <script
 			src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
 			integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
 			crossorigin=""
-		></script>
-		
+		></script> -->
+
 		<!-- Custom JS -->
-		<script src="../models/Point.js"></script>
+		<!-- <script src="../models/Pointer.js"></script>
 		<script src="../controllers/main1.js"></script>
-		<script src="../controllers/main2.js"></script>
+		<script src="../controllers/main2.js"></script> -->
 	</body>
 </html>
