--- a/src/views/ex1.html
+++ b/src/views/ex1.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Leaflet - coordenades</title>
 		<!-- favicon -->
-		<link rel="icon" type="image/png" href="../../../assets/leaflet_icon.ico" />
+		<link rel="icon" type="image/png" href="../assets/leaflet_icon.ico" />
 		<!-- Bootstrap CSS -->
 		<link
 			rel="stylesheet"
@@ -22,7 +22,7 @@
 		/>
 
 		<!-- Custom CSS -->
-		<link rel="stylesheet" href="./main.css" />
+		<!-- <link rel="stylesheet" href="./main.css" /> -->
 	</head>
 
 	<body>
@@ -65,7 +65,7 @@
 		></script>
 
 		<!-- Custom JS -->
-		<script src="../models/Point.js"></script>
-		<script src="../controllers/main1.js"></script>
+		<!-- <script src="../models/Pointer.js"></script>
+		<script src="../controllers/main1.js"></script> -->
 	</body>
 </html>
