--- a/src/views/main.css
+++ b/src/views/main.css
@@ -1,31 +1,39 @@
 body {
-  user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -moz-user-select: none;
-  background-image: url("../../../assets/leaves_V.jpg");
-  background-color: dimgray;
-  background-blend-mode: multiply;
-  background-position: top;
-  background-size: cover;
-  background-size: 768px; }
-  body header {
-    max-width: 768px;
-    background-color: olive; }
-  body main {
-    max-width: 768px; }
-    body main #barcelona {
-      width: 100%;
-      height: 384px; }
+	user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	-moz-user-select: none;
+	background-image: url("../../assets/leaves_V.jpg");
+	background-color: dimgray;
+	background-blend-mode: multiply;
+	background-position: top;
+	background-size: cover;
+	background-size: 768px;
+}
+body header {
+	max-width: 768px;
+	background-color: olive;
+}
+body main {
+	max-width: 768px;
+}
+body main #barcelona {
+	width: 100%;
+	height: 384px;
+}
 
 .text-olivedrab {
-  color: #9a9a00; }
+	color: #9a9a00;
+}
 
 .text-cadetblue {
-  color: cadetblue; }
+	color: cadetblue;
+}
 
 .border-olive {
-  border-color: olive !important; }
+	border-color: olive !important;
+}
 
 .bg-olive {
-  background-color: #242400; }
+	background-color: #242400;
+}
