--- a/src/views/ex2.html
+++ b/src/views/ex2.html
@@ -14,12 +14,12 @@
 			crossorigin="anonymous"
 		/>
 		<!-- Leaflet CCS -->
-		<!-- <link
+		<link
 			rel="stylesheet"
 			href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
 			integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
 			crossorigin=""
-		/> -->
+		/>
 
 		<!-- Custom CSS -->
 		<!-- <link rel="stylesheet" href="./main.css" /> -->
@@ -58,11 +58,11 @@
 		</main>
 
 		<!-- Laflet JS -->
-		<!-- <script
+		<script
 			src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
 			integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
 			crossorigin=""
-		></script> -->
+		></script>
 
 		<!-- Custom JS -->
 		<!-- <script src="../models/Pointer.js"></script>
